--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -30,9 +30,9 @@ jobs:
   build-and-push-docker-image:
     name: Build Docker image and push to repositories
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
+    # permissions:
+    #   contents: read
+    #   packages: write
     #needs: quality-check
 
     steps:
