--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -87,6 +87,9 @@ jobs:
           git --version
           git config user.name "connapotae"
           git config user.email "connapotae@gmail.com"
+          sed -i -E "s/ghcr.io\/connapotae\/devops-go-example.*$/ghcr.io\/connapotae\/devops-go-example:${GITHUB_SHA}/" kube-gitops/deployment.yml
+          git add kube-gitops/deployment.yml
+          git commit -m "🤖 change docker image version to ${GITHUB_SHA}"
       - name: push changes
         uses: ad-m/github-push-action@master
         with:
